--- a/style.css
+++ b/style.css
@@ -5,20 +5,21 @@ body {
   background-image: url(./Image/img1.jpg);
 }
 
-#container {
-  margin: 20px auto;
-}
+/* #container {
+  height: auto;
+} */
 
 #calculator {
   width: 320px;
   height: 520px;
-  padding: 20px;
+  padding: 10px;
   background: rgba(255, 255, 255, 0.7);
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
-  margin: 0 auto;
-  position: relative;
-  top: 15px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   border-radius: 10px;
   box-shadow: 13px 11px 28px 2px rgba(10, 9, 9, 0.53);
   -webkit-box-shadow: 13px 11px 28px 2px rgba(10, 9, 9, 0.53);
@@ -96,4 +97,14 @@ button:nth-child(16) {
 button:nth-child(20) {
   font-size: 20px;
   background-color: rgb(206, 137, 59);
+}
+
+/*Media Queries*/
+@media screen and (max-width: 320px) {
+  #calculatior {
+    max-width: 320px !important;
+  }
+  body{
+    overflow-y: hidden !important;
+  }
 }
